control de vistas segun rol_Layout.cshtml

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,3 +1,9 @@
+@using System.Security.Claims
+@{
+    var userId = User.FindFirst("UserId")?.Value;
+    bool isAdmin = User.IsInRole("Administrador");
+}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +15,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     @* <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" /> *@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="false" />
 
 </head>
 
@@ -26,7 +32,8 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
 
-                        @*                                     CONTRATO                                *@
+
+       @*                                     CONTRATO                                *@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Contratos</a>
@@ -40,27 +47,14 @@
                             </ul>
                         </li>
 
-                        
-                        @*                                     PAGOS                                *@
 
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago"
-                                        asp-action="Index">Principal</a></li>
-                                        
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago" data-bs-toggle="modal"
-                                        data-bs-target="#paymentModal" id="openModalBtn">Nuevo Pago</a></li>
-                            </ul>
-                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Inmuebles</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
-                                        asp-action="Disponibles">Inmuebles disponibles</a></li>
+                                        asp-action="DisponiblesTotales">Inmuebles disponibles</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="ListaPorPropietario">Inmuebles por Propietario</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
@@ -69,6 +63,9 @@
                                         asp-action="Editar">Nuevo Inmueble</a></li>
                             </ul>
                         </li>
+
+
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Inquilinos</a>
@@ -84,6 +81,25 @@
                             </ul>
                         </li>
 
+
+
+                      @*                           PAGOS                             *@
+
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago"
+                                        asp-action="Index">Principal</a></li>
+                                        
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago" data-bs-toggle="modal"
+                                        data-bs-target="#paymentModal" id="openModalBtn">Nuevo Pago</a></li>
+                            </ul>
+                        </li>
+
+
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Propietarios</a>
@@ -96,46 +112,71 @@
                                         opción</a></li>
                             </ul>
                         </li>
+
+
+
+                        @if (isAdmin)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">Usuarios
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
+                                            asp-action="Index">Lista de Usuarios</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
+                                            asp-action="Crear">Nuevo Usuario</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
+                                            asp-action="Login">Editar Usuario</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action=""></a></li>
+                                </ul>
+                            </li>
+                        }
+
+
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Usuarios
+                                data-bs-toggle="dropdown" aria-expanded="false">@User.Identity.Name
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Usuario" asp-action="Editar"
+                                        asp-route-id="@userId">Perfil </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
-                                        asp-action="Index">Lista de Usuarios</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
-                                        asp-action="Crear">Nuevo Usuario</a></li>
+                                        asp-action="Avatar">Editar Avatar</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Usuario" asp-action="">otra
-                                        opción</a></li>
+                                        opcion</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
+                                        asp-action="Logout">Salir</a></li>
                             </ul>
                         </li>
+
+                       
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
-            <div id="modal-nuevo">
-
-            </div>
-            <!-- Modal para nuevo pago -->
+        </main>
+             <!-- Modal para nuevo pago -->
 
            @* @Html.Partial("../Pago/Nuevo", new inmobiliaria_AT.Models.Pago())  *@
 
-        </main>
     </div>
 
     <footer class="border-top footer text-muted">
-
-
         <div class="container">
             &copy; 2024 - Inmobiliaria AT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
+
+    
+        <script>
         $(document).ready(function () {
             $('#openModalBtn').click(function () {
                 $('#paymentModal').modal('show');
@@ -145,7 +186,6 @@
             });
         });
     </script>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -154,7 +194,7 @@
     <script src="~/js/tipoModificar.js"></script>
     <script src="~/js/tipoEliminar.js"></script>
 
-    <script src="~/lib/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
