--- a/Views/Inmueble/_InmueblesPartial.cshtml
+++ b/Views/Inmueble/_InmueblesPartial.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<inmobiliaria_AT.Models.Inmueble>
 
-<table class="table text-center">
+<table class="table text-center mt-3">
     <thead>
         <tr>
             <th>Código</th>
@@ -21,8 +21,22 @@
                 <td>@inmueble.Direccion</td>
                 <td>@inmueble.TipoDescripcion</td>
                 <td>@inmueble.Ambientes</td>
-                <td>@inmueble.Precio</td>
-                <td>@(inmueble.Estado ? "Disponible" : "No Disponible")</td>
+                <td>$ @inmueble.Precio</td>
+                @* <td>@(inmueble.Estado ? "Disponible" : "No Disponible")</td> *@
+                <td>
+                    @if (inmueble.Estado)
+                    {
+                        <span style="color: rgb(26, 163, 26);">
+                            <i class="fas fa-check estado-true"></i>
+                        </span>
+                    }
+                    else
+                    {
+                        <span style="color: red;">
+                            <i class="fas fa-times estado-false"></i>
+                        </span>
+                    }
+                </td>
                 <td>@(inmueble.Suspendido ? "Sí" : "No")</td>
                 <td>
                     @if (inmueble.Suspendido)
