actualización, control en vistas

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,28 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Nuestros medios de contacto ";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<ul style="padding: 0; margin-top: 50px;">
+    <li style="margin-bottom: 15px; list-style-type: none;">
+        <img src="~/facebook.png" width="40" height="40" title="Facebook" />
+        <a href="http://facebook.com" style="text-decoration: none; color: black;">facebook/inmobiliariaAT.com</a>
+    </li>
+    <li style="margin-bottom: 15px; list-style-type: none;">
+        <img src="~/correoElectronico.png" width="40" height="40" title="Correo electrónico" />
+        <a href="http://outlook.com" style="text-decoration: none; color: black;">inmobiliariaAT@outlook.com</a>
+    </li>
+    <li style="margin-bottom: 15px; list-style-type: none;">
+        <img src="~/telefono.png" width="40" height="40" title="Teléfono" />
+        <a style="text-decoration: none; color: black;">Teléfono: 2664070707</a>
+    </li>
+    <li style="margin-bottom: 15px; list-style-type: none;">
+        <img src="~/instagram.png" width="40" height="40" title="Instagram" />
+        <a href="http://instagram.com" style="text-decoration: none; color: black;">instagram/inmobiliariaAT.com</a>
+    </li>
+    <li style="margin-bottom: 15px; list-style-type: none;">
+        <img src="~/direccion.png" width="40" height="40" title="Dirección" />
+        <a href="#" style="text-decoration: none; color: black;"> Calle Siempre Viva 777</a>
+    </li>
+</ul>
