--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Lista de Inmuebles";
     bool isAdmin = User.IsInRole("Administrador");
+    bool IsEmple = User.IsInRole("Empleado");
 }
 <div class="text-center row mt-3 mb-3">
     <h1>Inmuebles</h1>
@@ -9,14 +10,16 @@
 
 <div class="row mt-4 mb-3 align-items-center">
     <!-- Botón de Agregar -->
-    <div class="col-md-1 mb-2">
-        <button type="button" class="btn btn-light">
-            <a href="/Inmueble/Editar" title="Agregar Inmueble" class="text-decoration-none">
-                <i class="fa-duotone fa-solid fa-plus"></i>
-            </a>
-        </button>
-    </div>
-
+    @if (isAdmin || IsEmple)
+    {
+        <div class="col-md-1 mb-2">
+            <button type="button" class="btn btn-light">
+                <a href="/Inmueble/Editar" title="Agregar Inmueble" class="text-decoration-none">
+                    <i class="fa-duotone fa-solid fa-plus"></i>
+                </a>
+            </button>
+        </div>
+    }
     <!-- Radio Buttons para Filtrar -->
     <div class="col-md-10 mb-2">
         <form id="filterForm" class="d-flex align-items-center">
