--- a/Views/Inmueble/_InmueblesIndexPartial.cshtml
+++ b/Views/Inmueble/_InmueblesIndexPartial.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Lista de Inmuebles Parcial";
     bool isAdmin = User.IsInRole("Administrador");
+    bool IsEmple = User.IsInRole("Empleado");
 }
 
 <table class="table text-center mt-4">
@@ -14,7 +15,10 @@
             <th>Tipo de inmueble</th>
             <th>@Html.DisplayNameFor(model => model.Ambientes)</th>
             <th>@Html.DisplayNameFor(model => model.Precio)</th>
-            <th>Propietario</th>
+            @if (isAdmin || IsEmple)
+            {
+                <th>Propietario</th>
+            }
             <th>@Html.DisplayNameFor(model => model.Estado)</th>
         </tr>
     </thead>
@@ -28,7 +32,10 @@
                 <td>@Html.DisplayFor(modelItem => item.TipoDescripcion)</td>
                 <td>@Html.DisplayFor(modelItem => item.Ambientes)</td>
                 <td>$ @Html.DisplayFor(modelItem => item.Precio)</td>
-                <td>@(item.PropietarioInmueble.NombreCompleto)</td>
+                @if (isAdmin || IsEmple)
+                {
+                    <td>@(item.PropietarioInmueble.NombreCompleto)</td>
+                }
                 <td>
                     @if (item.Estado)
                     {
@@ -44,18 +51,21 @@
                     }
                 </td>
                 <td>
-                    <a href="/Inmueble/Editar/@item.Id"></a>
-                    <form action="@Url.Action("Editar", new { id = item.Id })" method="get" style="display: inline;">
-                        <button type="submit" class="btn btn-warning btn-custom" title="Editar">
-                            <i class="fa-solid fa-pen"></i>
-                        </button>
-                    </form>
-                    <a href="/Inmueble/Detalle/@item.Id"></a>
-                    <form action="@Url.Action("Detalle", new { id = item.Id })" method="get" style="display: inline;">
-                        <button type="submit" class="btn btn-info btn-custom" title="Detalles">
-                            <i class="fa-solid fa-circle-info"></i>
-                        </button>
-                    </form>
+                    @if (isAdmin || IsEmple)
+                    {
+                        <a href="/Inmueble/Editar/@item.Id"></a>
+                        <form action="@Url.Action("Editar", new { id = item.Id })" method="get" style="display: inline;">
+                            <button type="submit" class="btn btn-warning btn-custom" title="Editar">
+                                <i class="fa-solid fa-pen"></i>
+                            </button>
+                        </form>
+                        <a href="/Inmueble/Detalle/@item.Id"></a>
+                        <form action="@Url.Action("Detalle", new { id = item.Id })" method="get" style="display: inline;">
+                            <button type="submit" class="btn btn-info btn-custom" title="Detalles">
+                                <i class="fa-solid fa-circle-info"></i>
+                            </button>
+                        </form>
+                    }
                     @if (isAdmin)
                     {
                         <button type="submit" class="btn btn-danger btn-custom"
