--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @{
     var userId = User.FindFirst("UserId")?.Value;
     bool isAdmin = User.IsInRole("Administrador");
+    bool isEmple = User.IsInRole("Empleado");
 }
 
 <!DOCTYPE html>
@@ -53,32 +54,40 @@
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Inmuebles</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
+                                        asp-action="Buscar">Buscar inmuebles</a></li>
+                              @if (isEmple || isAdmin)
+                                {
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="ListaPorPropietario">Inmuebles por Propietario</a></li>
+                                }
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Index">Listado de inmuebles</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
+                                @if (isEmple || isAdmin)
+                                {
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Editar">Nuevo Inmueble</a></li>
+                                }
                             </ul>
                         </li>
 
 
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                    @if (isEmple || isAdmin)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Inquilinos</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Inquilino"
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inquilino"
                                         asp-action="Index">Lista de Inquilinos</a>
-                                </li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Inquilino"
+                                    </li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Inquilino"
                                         asp-action="Editar">Nuevo Inquilino</a>
-                                </li>
-                              
-                            </ul>
-                        </li>
+                                    </li>
 
+                                </ul>
+                            </li>
+                        }
 
 
                       @*                           PAGOS                             *@
@@ -97,9 +106,10 @@
                         </li>
 
 
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                        @if (isEmple || isAdmin)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Propietarios</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Propietario"
@@ -109,7 +119,7 @@
                               
                             </ul>
                         </li>
-
+                        }
 
 
                         @if (isAdmin)
@@ -130,8 +140,9 @@
                             </li>
                         }
 
-
-
+ 
+                        @if (isEmple || isAdmin)
+                        {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">@User.Identity.Name
@@ -147,8 +158,7 @@
                                         asp-action="Logout">Salir</a></li>
                             </ul>
                         </li>
-
-                       
+                        }                       
                     </ul>
                 </div>
             </div>
@@ -168,7 +178,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Inmobiliaria AT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Inmobiliaria AT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contáctanos</a>
         </div>
     </footer>
 
