--- a/Views/Contrato/Editar.cshtml
+++ b/Views/Contrato/Editar.cshtml
@@ -1,7 +1,7 @@
 @model inmobiliaria_AT.Models.Contrato
 
 @{
-    ViewData["Title"] = "Listado de Contratos";
+    ViewData["Title"] = "Editar contratp";
     int id = Model == null ? 0 : Model.Id;
 }
 
