--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -53,7 +53,7 @@
 
                         @if (item.Estado != false)
                         {
-                            <button type="button" class="btn btn-danger"
+                            <button type="button" class="btn btn-warning"
                                 onclick="anular(@item.Id, '@item.Fecha', '@item.Contrato.Inmu.Direccion', '@item.Monto', '@item.Concepto.Nombre')">
                                 Anular
                             </button>
